# player-churn-mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODOS.md  prefect_flows.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-feast.yml
docker/: dockerfile.mlflow  dockerfile.preprocess  dockerfile.train
docs/: dataset_structure_summary.md
feature_store/: feature_store.yaml  features.py
kubernetes/: README.md  aws_cloudwatch_cm.yaml  aws_cloudwatch_namespace.yaml  preprocess.yaml  service-account.yaml
kubernetes/base/: aws_cloudwatch_fargate_setup.yaml  mlflow-setup.yaml  namespace.yaml  preprocess-resources.yaml  service-account.yaml  train-resources.yaml  training-setup.yaml
kubernetes/deployments/: mlflow-server.yaml
kubernetes/helm/values/dask/: values-dev.yaml  (+3 more)
kubernetes/jobs/: preprocess.yaml  preprocessing-job.yaml  training-job.yaml
kubernetes/scripts/: cleanup.sh  create-mlflow-secret.sh  deploy-dask-cluster.sh  deploy-mlflow-server.sh  deploy-mlflow.sh  install-dask-helm.sh  install-dask-operator.sh  port-forward-dashboard.sh  run-preprocessing-job.sh  run-training-job.sh  setup-base-resources.sh  submit-preprocessing-job.sh
scripts/: convert_to_parquet.py  push-images-to-ecr.sh
snippets/: basic_count_csv_rows.py  count_csv_rows.py  filter_rows_and_columns.py  group_logs_by_session.py
src/: __init__.py  predict.py  preprocess.py  train.py
terraform/: README.md  data_sources.tf  ecr.tf  eks.tf  fargate-logging-configmap.yaml  fargate.tf  iam.tf  locals.tf  logging.tf  main.tf  outputs.tf  s3.tf  vpc.tf
terraform/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  tfplan  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eks-cluster/: fargate.tf  logging.tf  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  mlflow.tf  outputs.tf  training.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: test_dask_integration.py  test_preprocess.py  test_train.py
